# ort_test

./: CMakeLists.txt  README.md
models/: link_model_yolov7-headface-v1.txt
test_code/: runExample.cpp
